[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
anyhow = "1.0.66"
humantime = "2.1.0"
owo-colors = "3.5.0"
num = "0.4.1"
itertools = "0.10.5"
funty = "2.0.0"
lazy_static = "1.4.0"
either = "1.8.1"